[gd_scene load_steps=7 format=1]

[ext_resource path="res://zelda-like/resources/objects/types/body.tscn" type="PackedScene" id=1]
[ext_resource path="res://zelda-like/scripts/classes/npc.gd" type="Script" id=2]
[ext_resource path="res://zelda-like/scripts/events/behaviour.gd" type="Script" id=3]
[ext_resource path="res://zelda-like/scripts/events/event.gd" type="Script" id=4]
[ext_resource path="res://zelda-like/assets/imgs/idle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 12 )

[node name="npc" instance=ExtResource( 1 )]

collision/layers = 4
collision/mask = 3
script/script = ExtResource( 2 )
behaviourScript = ExtResource( 3 )
eventScript = ExtResource( 4 )

[node name="sprite" parent="."]

texture = ExtResource( 5 )
frame = 0

[node name="collision" parent="."]

transform/pos = Vector2( 1, 0 )

[node name="interaction_area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="area" type="CollisionShape2D" parent="interaction_area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="interaction_area" to="." method="_on_interaction_area_body_enter"]

[connection signal="body_exit" from="interaction_area" to="." method="_on_interaction_area_body_exit"]


